tests/snapshots/corpus__deep_chain.snap
---
source: tests/corpus.rs
expression: render_paths(&paths)
---
flowchart TD
    n0["a"]
    n1["b"]
    n2["c"]
    n3["d"]
    n4["e"]
    n5["f"]
    n6["g"]
    n7["h"]
    n8["i"]
    n9["j"]
    n0 --> n1
    n1 --> n2
    n2 --> n3
    n3 --> n4
    n4 --> n5
    n5 --> n6
    n6 --> n7
    n7 --> n8
    n8 --> n9
