tests/snapshots/corpus__single_node.snap
---
source: tests/corpus.rs
expression: "render_paths(&[\"solo\"])"
---
flowchart TD
    n0["solo"]
