tests/snapshots/corpus__title_and_direction.snap
---
source: tests/corpus.rs
expression: out
---
---
title: "Org \"chart\""
---
flowchart LR
    n0["a"]
    n1["b"]
    n2["c"]
    n0 --> n1
    n0 --> n2
classDef inferred stroke-dasharray:5 5,stroke:#999,color:#666,fill:#f4f4f4;
class n0 inferred
